Basic JWKTL integration and custom Dutch template handlers with some tests

--- a/build.gradle
+++ b/build.gradle
@@ -9,12 +9,18 @@ repositories {
     mavenCentral()
 }
 
+test {
+    useJUnitPlatform()
+}
+
 dependencies {
+    testCompile 'io.kotlintest:kotlintest-runner-junit5:3.1.7'
     compile "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
     compile "no.tornado:tornadofx:1.7.16"
-    compile 'com.sleepycat:je:5.0.73'
+    compile "com.sleepycat:je:5.0.73"
     compile files("lib/dkpro-jwktl.jar")
     compile "com.xenomachina:kotlin-argparser:2.0.7"
+    compile "org.jsoup:jsoup:1.11.3"
 }
 
 compileKotlin {
